Add medication cast
